2003-06-08  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-properties-window.c:
	(create_basic_page): 
	(get_pixbuf_for_properties_window),
	(update_properties_window_icon), (create_image_widget): If
	all files have the same icon, show that icon.
	(properties_window_update): Update the icon.
	(remove_from_dialog): Fixed a problem removing from the 
	target file list.

2003-06-08  Dave Camp  <dave@ximian.com>

	* src/nautilus-zoom-control.c: (nautilus_zoom_control_finalize),
	(nautilus_zoom_control_button_press_event), (zoom_out_clicked),
	(zoom_in_clicked), (set_label_size), (label_style_set_callback),
	(nautilus_zoom_control_instance_init), (nautilus_zoom_control_new),
	(nautilus_zoom_control_redraw), (create_zoom_menu),
	(nautilus_zoom_control_set_zoom_level),
	(nautilus_zoom_control_set_parameters),
	(nautilus_zoom_control_class_init),
	(nautilus_zoom_control_accessible_get_type):
	* src/nautilus-zoom-control.h: New zoom control using stock 
	widgets.  Patch from Iain Holmes <iain@prettypeople.org>. 

2003-06-08  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-properties-window.h:
	* libnautilus-private/nautilus-mime-actions.c:
	(has_server_info_in_list), (server_info_list_intersection),
	(nautilus_mime_get_property_components_for_files):
	* libnautilus-private/nautilus-mime-actions.h:
	* src/file-manager/fm-directory-view.c:
	(open_properties_window_callback), (open_one_in_new_window):
	* src/file-manager/fm-properties-window.c: (is_multi_file_window),
	(get_original_file), (get_target_file_for_original_file),
	(get_target_file), (add_prompt_and_separator),
	(get_pixbuf_for_properties_window), (reset_icon),
	(create_image_widget_for_file), (update_name_field),
	(name_field_restore_original_name), (name_field_done_editing),
	(file_has_keyword), (get_initial_emblem_state),
	(emblem_button_toggled), (emblem_button_update),
	(update_properties_window_title), (remove_from_dialog),
	(mime_list_equal), (get_mime_list), (properties_window_update),