@@ -1,5 +1,11 @@
 2003-06-08  Dave Camp  <dave@ximian.com>
 
+	* src/file-manager/fm-directory-view.c:
+	(add_bonobo_menu_ui_and_verbs): Allow the context menu to supply
+	an icon.
+
+2003-06-08  Dave Camp  <dave@ximian.com>
+
 	* src/file-manager/fm-properties-window.c:
 	(create_basic_page): 
 	(get_pixbuf_for_properties_window),
